[project]
name = "hotelmap"
version = "0.1.0"
description = "Hotel record normalization pipeline (pre-Splink)"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.41",
    "h3>=4.5",
    "phonenumbers>=9.0",
    "Unidecode>=1.4",
    "pyyaml>=6.0",
    "tldextract>=5.3",
    "duckdb>=1.5",
]

[project.scripts]
hotelmap-normalize = "hotelmap.normalize.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hotelmap"]
